--- a/Source/MiniCast.Client/packages.config
+++ b/Source/MiniCast.Client/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Acr.Settings" version="9.0.1" targetFramework="net472" />
   <package id="BouncyCastle.NetCore" version="1.8.3" targetFramework="net472" />
   <package id="CommonServiceLocator" version="2.0.4" targetFramework="net472" />
   <package id="ControlzEx" version="3.0.2.4" targetFramework="net472" />
